hphp/test/zend/bad/ext/standard/tests/assert/assert_closures.php
<?php
assert_options(ASSERT_CALLBACK, function () { echo "Hello World!\n"; });
assert(0);
?>